--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -35,5 +35,19 @@ header {
 
         }
 
+        .company {
+            display: block;
+            position: absolute;
+            left: 84px; top: 40%;
+
+            span {
+                display: block;
+                width: 100%;
+                margin: 0;
+                font-size: calc(20px + 2vmin);
+                cursor: default;
+            }
+        }
+
     }
 }
