Added Dropdown Menu Components with tests

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,5 +2,13 @@
 
 .App {
   text-align: center;
-}
 
+  // main {
+  //   background-color: chartreuse;
+  // }
+
+  main .ui.compact.menu {
+    margin: 10px;
+  }
+
+}
