--- a/src/App.scss
+++ b/src/App.scss
@@ -1,14 +1,14 @@
-@import './shared.scss';
+@import "./shared.scss";
 
 .App {
   text-align: center;
 
-  // main {
-  //   background-color: chartreuse;
-  // }
+  main {
+    width: 60%;
+    margin: auto;
 
-  main .ui.compact.menu {
-    margin: 10px;
+    .ui.fluid.selection.dropdown {
+      margin: 10px;
+    }
   }
-
 }
