--- a/src/components/beerList/styles.scss
+++ b/src/components/beerList/styles.scss
@@ -1,11 +1,5 @@
 @import "./../../shared.scss";
 
 .list {
-  .ui.cards {
-    margin: -0.875em 5.4em;
-  }
-  .ui.card:only-child {
-    margin: auto;
-    margin-top: 0.875em;
-  }
+  //Something needed?
 }
