--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -1,53 +1,53 @@
-@import './../../shared.scss';
+@import "./../../shared.scss";
 
 header {
+  display: block;
+  width: 100%;
+  height: 70px;
+  margin: 0 auto;
+  padding: 0 10px;
+  background: $primaryWhite;
+
+  .wrap {
+    position: relative;
     display: block;
     width: 100%;
-    height: 70px;
+    height: 100%;
     margin: 0 auto;
-    padding: 0 10px;
-    background: $primaryWhite;
+    max-width: 900px;
 
-    .wrap {
-        position: relative;
+    .logo {
+      display: block;
+      height: 4rem;
+      width: 4rem;
+      padding-top: 4px;
+      position: absolute;
+      left: 10px;
+      top: 50%;
+      -webkit-transform: translateY(-50%);
+      -moz-transform: translateY(-50%);
+      transform: translateY(-50%);
+
+      img {
         display: block;
         width: 100%;
-        height: 100%;
-        margin: 0 auto;
-        max-width: 980px;
-
-        .logo {
-            display: block;
-            height: 4rem;
-            width: 4rem;
-            padding-top: 4px;
-            position: absolute;
-            left: 10px; top: 50%;
-            -webkit-transform: translateY(-50%);
-            -moz-transform: translateY(-50%);
-            transform: translateY(-50%);
-
-            img {
-                display: block;
-                width: 100%;
-                margin: 0;
-            }
-
-        }
-
-        .company {
-            display: block;
-            position: absolute;
-            left: 84px; top: 40%;
-
-            span {
-                display: block;
-                width: 100%;
-                margin: 0;
-                font-size: calc(20px + 2vmin);
-                cursor: default;
-            }
-        }
-
+        margin: 0;
+      }
     }
+
+    .company {
+      display: block;
+      position: absolute;
+      left: 84px;
+      top: 40%;
+
+      span {
+        display: block;
+        width: 100%;
+        margin: 0;
+        font-size: calc(20px + 2vmin);
+        cursor: default;
+      }
+    }
+  }
 }
